WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307845
[WGSL] webgpu:shader,validation,expression,call,builtin,smoothstep:* is failing
https://bugs.webkit.org/show_bug.cgi?id=307845
Summary
[WGSL] webgpu:shader,validation,expression,call,builtin,smoothstep:* is failing
Tadeu Zagallo
Reported
2026-02-13 13:35:50 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-13 13:35:59 PST
<
rdar://problem/170343593
>
Tadeu Zagallo
Comment 2
2026-02-13 13:41:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58664
EWS
Comment 3
2026-02-24 08:55:16 PST
Committed
308125@main
(d048b50e6d43): <
https://commits.webkit.org/308125@main
> Reviewed commits have been landed. Closing PR #58664 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug