[WGSL] webgpu:shader,validation,expression,call,builtin,smoothstep:* is failing https://bugs.webkit.org/show_bug.cgi?id=307845 rdar://170343593

Reviewed by Mike Wyrzykowski.

Add missing validation to smoothstep and extra validation function to run when only
partial arguments are available. Th remaining failing tests appear to be incorrect.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/expression/call/builtin/smoothstep-expected.txt:
* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::TERNARY_OPERATION):
(WGSL::VALIDATION_FUNCTION):
* Source/WebGPU/WGSL/TypeDeclarations.rb:

Canonical link: https://commits.webkit.org/308125@main