Source/WebGPU/WGSL/TypeDeclarations.rb
@@ -856,6 +856,7 @@ function :sign, {
 function :smoothstep, {
     must_use: true,
     const: true,
+    validate: true,
 
     [T < Float].(T, T, T) => T,
     [T < Float, N].(vec[N][T], vec[N][T], vec[N][T]) => vec[N][T],
